added statements to show letters guessed and countdown guesses left, as well as alerts if you won or lost

--- a/index.html
+++ b/index.html
@@ -4,23 +4,26 @@
 <head>
   <meta charset="UTF-8">
   <title>ArE yOu PsYcHiC?</title>
-  <!-- <script rel="javascript" type="text/javascript" href="assets/game.js"</script>
-  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css"> -->
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> -->
+  <!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
+  <!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css"> --> 
 </head>
 
 <body>
 
-    <div id="game">
-        <h1>Press any letter to see if you are truly psychic....</h1>
+    <div class="container">
+        <h1>The Psychic Game</h1>
         <br>
-        <p><h3 id="wins">Wins: </h3></p>
-        <p><h3 id="losses">Losses: </h3></p>
-        <p><h3 id="guessesLeft">Guesses Left: </h3></p>
-        <p><h3 id="lettersGuessed">Letters Guessed so far: </h3></p> 
-
+        <h2>Press any letter to see if you are psychic...</h2>
     </div>
-    
+
+    <div id="game">
+        <p>Wins: 0</p>
+        <p>Losses: 0</p>
+        <p>Guesses Left: </p>
+        <p>Letters guessed so far: </p> 
+    </div>
+    <script src="assets/javascript/game.js"></script>   
 
 </body>
 </html>
