--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <title>ArE yOu PsYcHiC?</title>
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=The+Girl+Next+Door" rel="stylesheet">
   <!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
-  <!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css"> --> 
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css"> 
 </head>
 
 <body>
