--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
   <meta charset="UTF-8">
   <title>ArE yOu PsYcHiC?</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css?family=The+Girl+Next+Door" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Creepster" rel="stylesheet">
   <!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
   <link rel="stylesheet" type="text/css" href="assets/css/style.css"> 
 </head>
 
 <body>
 
-    <div class="container">
+<div class="container">
+    <div class="title">
         <h1>The Psychic Game</h1>
         <br>
         <h2>Press any letter to see if you are psychic...</h2>
+        <br>
     </div>
 
     <div id="game">
@@ -24,7 +26,19 @@
         <p>Guesses Left: </p>
         <p>Letters guessed so far: </p> 
     </div>
-    <script src="assets/javascript/game.js"></script>   
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+</div>
+
+<script src="assets/javascript/game.js"></script>   
 
 </body>
 </html>
